        - Rebuild: Made export_version accept an identifier as well as a string
          (see ticket #40).
        - Rebuild: Now closes the response file properly after using it (see
          ticket #42).
        - Rebuild: Now supports comments in response files (see ticket #43).
        - Rebuild: Allow -arch and -isysroot flags on OS X (see ticket #27).

0.61 from 0.60+0.18:
        - Rebuild: Fixed a (potential) segfault bug in rebuild with modules
          with no module declaration.
        - Rebuild: Made a bit less intolerant of modules with no module
          declarations.
        - Rebuild: Fixed some problems with dmd-win profile.
        - Synchronized DSSS and Rebuild version numbers.

0.60+0.18 from 0.59+0.17:
        - Rebuild: Fixed a segfault bug.

0.59+0.17 from 0.58+0.16:
        - Made it possible to install list.list to /etc rather than
          <prefix>/etc
        - Rebuild: Added a man page.
        - Rebuild: Made (independent) installation a bit more configurable.
        - Added support for one-module [source]libraries.
        - Integrated candydoc.
        - Added --doc option, to automatically generate documentation for all
          [source]libraries.

0.58+0.16 from 0.57+0.15:
        - Rebuild: Updated DMD frontend version (to DMD 1.012).
        - Removed util/macro.d, which doesn't work with DMD 1.012.

0.57+0.15 from 0.56+0.14:
        - Rebuild: Updated DMD frontend version (to DMD 1.010).
        - Fixed a bug with std.c.darwin.darwin vs std.c.unix.unix on OS X.
        - Rebuild: -dc is now allowed in response files (see ticket #19)
        - Rebuild: Fixed library linking order for DMD on Posix.
        - Fixed problems with cross-compilation.
        - Misc. bug fixes.
        - Rebuild: Fixed -clean to only remove generated files. (see ticket #20)
        - Rebuild: -J is now passed through properly.
        - Rebuild: -g and -gc are now passed through properly.

0.56+0.14 from 0.55+0.13: