@@ -10,6 +10,7 @@ SVN from 0.61:
           ticket #42).
         - Rebuild: Now supports comments in response files (see ticket #43).
         - Rebuild: Allow -arch and -isysroot flags on OS X (see ticket #27).
+        - Rebuild: Added path= variable to config files (see ticket #29).
 
 0.61 from 0.60+0.18:
         - Rebuild: Fixed a (potential) segfault bug in rebuild with modules
